# Aurora-X-v1.2.0

./: .gitignore  Dockerfile  README.md  audit.toml  docker-compose.yml  final_verification.py  proposal_opt.json  requirements.txt  train_scaled_models.py  verify_integration.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci-go.yml  ci-python.yml  ci-rust.yml  codeql-analysis.yml  docker-build.yml  release.yml  security-scan.yml
aurora_core/: Cargo.toml  pyproject.toml
aurora_core/src/: degradation.rs  kalman.rs  lib.rs  physics.rs  safety.rs  spectral.rs  stream.rs
aurora_x/: __init__.py  config.py  main.py
aurora_x/api/: server.py  terminal.py
aurora_x/digital_twin/: degradation_model.py  physics_engine.py  twin_manager.py
aurora_x/estimation/: fusion_engine.py  kalman_filter.py  neural_residual.py
aurora_x/fault_detection/: fault_engine.py  ml_classifiers.py  residual_analyzer.py  temporal_models.py
aurora_x/ingestion/: edge_gateway.py  event_log.py  go_client.py  message_broker.py  sensor_simulator.py
aurora_x/ml_data/: generate_ml_datasets.py
aurora_x/observability/: metrics.py  tracing.py
aurora_x/pipeline/: anomaly_scorer.py  secure_gateway.py  spectral.py  statistics.py  stream_processor.py
aurora_x/rl/: environment.py  policies.py  reward.py  safety_controller.py  trainer.py
aurora_x/security/: access_control.py  review_manager.py
aurora_x/storage/: cache.py  (+2 more)
config/: default.yaml  logging.yaml
dashboard/: index.html
scripts/: aurora-push  aurora-review  aurora-twin
services/: go.mod  go.sum
(+8 files in other folders)
