[package]
name = "aurora_core"
version = "0.1.0"
edition = "2021"
description = "AURORA-X high-performance compute core"

[lib]
name = "aurora_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
nalgebra = "0.33"
rustfft = "6.2"
num-complex = "0.4"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
