[package]
name = "aurora_core"
version = "0.1.0"
edition = "2021"
description = "AURORA-X high-performance compute core"

[lib]
name = "aurora_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray = "0.16"
nalgebra = "0.33"
rustfft = "6.2"
num-complex = "0.4"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
tokio = { version = "1.36", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
